# knowledge-graph-ai

./: .env.example  .env.exmaple  .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: architecture.md  mcp.md
app/: config.py
app/api/: routes.py
app/graph/: sources.py  state.py  workflow.py
app/graph/nodes/: __init__.py  generate.py  grade.py  retrieve.py  rewrite.py  routing.py  summarize.py  web_search.py
app/ingestion/: chunker.py  loader.py  pipeline.py
app/llm/: groq_client.py  rag.py
app/mcp/: fastapi.py  github.py  langsmith.py  pinecone.py  python.py  registry.py  tavily.py
app/memory/: checkpoint.py  history.py
app/prompts/: grade.py  rewrite.py
app/retriever/: embeddings.py  pinecone_retriever.py
app/search/: query.py
data/docs/docker/: overview.md
data/docs/fastapi/: dependency-injection.md  overview.md
data/docs/kubernetes/: overview.md
data/docs/langchain/: overview.md
data/docs/langgraph/: overview.md
data/docs/rag/: overview.md
scripts/: seed_pinecone.py
sprints/: 00_sprint_foundation.md  01_sprint_fast_api_llm.md  02_sprint_document_ingestion.md  03_sprint_rag.md  04_sprint_langgraph.md  05_sprint_query_rewrite.md  06_sprint_document_grading.md  07_sprint_tavily_fallback.md  08_sprint_langsmith.md  09_sprint_polish_and_release.md
tests/: conftest.py  test_api.py  test_memory.py  test_rag_flow.py  test_search_query.py
