[project]
name = "knowledge-graph-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.4",
    "langsmith>=0.8.9",
    "pinecone>=9.1.0",
    "pinecone-client>=6.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tavily-python>=0.7.25",
    "uvicorn>=0.49.0",
]
